--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cssmin": "^0.4.3",
+    //"cssmin": "^0.4.3",
     "htmlmin": "0.0.7",
     "lite-server": "^2.3.0",
     "node-sass": "^4.14.1",
     "onchange": "^7.0.2",
     "parallelshell": "^3.0.1",
     "rimraf": "^3.0.2",
-    "uglifyjs": "^2.4.11",
+    //"uglifyjs": "^2.4.11",
     "usemin-cli": "^0.6.0"
   },
   "dependencies": {
