--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "onchange": "^7.0.2",
     "parallelshell": "^3.0.1",
     "rimraf": "^3.0.2",
-    //"uglifyjs": "^2.4.11",
+    "uglifyjs": ">=2.6.0",
     "usemin-cli": "^0.6.0"
   },
   "dependencies": {
